tests/reference/asr-implicit_typing3-c82e537.stderr
semantic error: Return type not specified
 --> tests/errors/implicit_typing3.f90:4:9 - 5:25
  |
4 |            function fun()
  |            ^^^^^^^^^^^^^^...
...
  |
5 |            end function fun
  | ...^^^^^^^^^^^^^^^^^^^^^^^^^ 
